# VocaRig

./: .gitattributes  .gitignore  LICENSE  README.md  VocaRig Proje Raporu.docx  VocaRigTraining.code-workspace  pyproject.toml
configs/: train_config.yaml
data/processed/: beat_vocarig_1h.npz  beat_vocarig_1h_metadata.json
models/trained/: vocarig_lipsync_gru_20260529-185524.onnx  vocarig_lipsync_gru_20260529-185524.pt  vocarig_lipsync_gru_20260529-185524_training_metrics.json  vocarig_lipsync_gru_20260530-124422.onnx  vocarig_lipsync_gru_20260530-124422.pt  vocarig_lipsync_gru_20260530-124422_training_metrics.json  vocarig_lipsync_gru_20260530-160512.pt  vocarig_lipsync_gru_20260530-160512_training_metrics.json  vocarig_lipsync_gru_20260530-162455.pt  vocarig_lipsync_gru_20260530-162455_training_metrics.json  vocarig_lipsync_gru_20260531-121301.onnx  vocarig_lipsync_gru_20260531-121301.pt  vocarig_lipsync_gru_20260531-121301_training_metrics.json
presentation/: generate_pdf.py  index.html  presentation.css  presentation.js
scripts/: export_onnx.py  generate_synthetic_data.py  prepare_beat_vocarig.py  run_ui.py  train_model.py
src/vocarig/: __init__.py
src/vocarig/audio/: __init__.py  features.py
src/vocarig/models/: __init__.py  blendshapes.py  lipsync_gru.py
src/vocarig/runtime/: __init__.py  mixer.py
src/vocarig/synthetic/: __init__.py  dataset.py  generate.py  visemes.py
src/vocarig/training/: __init__.py  data.py  (+4 more)
tests/: __init__.py  test_beat_silence_cleanup.py  test_contracts.py  test_synthetic_generation.py  test_training.py  test_ui_api.py
(+10 files in other folders)
